--- a/Makefile.in.icc
+++ b/Makefile.in.icc
@@ -3,7 +3,7 @@ MPICC=mpiicc
 CFLAGS=-std=c99 -g
 
 # If you're using icc, these are good flags to try
-OPTFLAGS= -O3 -no-prec-div -unroll-agressive
+#OPTFLAGS= -O3 -no-prec-div -unroll-agressive
 # OPTFLAGS=-O3 -no-prec-div -xcore-avx2 -ipo -qopt-report=5 -qopt-report-phase=vec -fstrict-aliasing -unroll-agressive
 
 CFLAGS+=$(OPTFLAGS)
