--- a/Makefile.in.icc
+++ b/Makefile.in.icc
@@ -1,11 +1,16 @@
+
 CC=icc
 MPICC=mpiicc
 CFLAGS=-std=c99 -g
+LDFLAGS=-fopenmp
 
 # If you're using icc, these are good flags to try
 #OPTFLAGS= -O3 -no-prec-div -unroll-agressive
-# OPTFLAGS=-O3 -no-prec-div -xcore-avx2 -ipo -qopt-report=5 -qopt-report-phase=vec -fstrict-aliasing -unroll-agressive
+OPTFLAGS=-O3 -no-prec-div -xcore-avx2 -ipo -qopt-report=5 -qopt-report-phase=vec -fstrict-aliasing -unroll-agressive
 
 CFLAGS+=$(OPTFLAGS)
 MPI_CFLAGS=$(CFLAGS)
-OMP_CFLAGS=$(CFLAGS) -openmp
+# OMP_CFLAGS=$(CFLAGS) -openmp
+
+LIBMKL=-L${MKLROOT}/lib/intel64 -lmkl_intel_ilp64 -lmkl_core -lmkl_intel_thread -lpthread -lm
+INCMKL=-DMKL_ILP64 -qopenmp -I${MKLROOT}/include -offload-attribute-target=mic -offload-option,mic,compiler," -L${MKLROOT}/lib/mic -lmkl_intel_ilp64 -lmkl_core -lmkl_intel_thread"
