--- a/Makefile.in.icc
+++ b/Makefile.in.icc
@@ -6,8 +6,8 @@ LDFLAGS=-fopenmp
 
 # If you're using icc, these are good flags to try
 #OPTFLAGS= -O3 -no-prec-div -unroll-agressive
-OPTFLAGS=-O3 -no-prec-div -ipo -qopt-report=5 -qopt-report-phase=vec -fstrict-aliasing -xcore-avx2 \
-	     -unroll-agressive
+OPTFLAGS=-O3 -no-prec-div -ipo  -fstrict-aliasing -unroll-agressive
+#OPTFLAGS+=-qopt-report=5 -qopt-report-phase=vec -xcore-avx2
 
 #CFLAGS+=$(OPTFLAGS)
 # OMP_CFLAGS=$(CFLAGS) -openmp
